--- a/src/app/components/users-table/users-table.component.scss
+++ b/src/app/components/users-table/users-table.component.scss
@@ -2,13 +2,10 @@
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    border: 3px solid red;
 
     &__header {
         display: flex;
-        //border: 1px solid red;
-
-        justify-content: flex-end;
+        justify-content: space-between;
 
         &__button {
             padding: 0.5rem 0 0.5rem 0;
@@ -16,10 +13,7 @@
     }
 }
 
-
-
-
 table {
-    width: 70%;
+    width: 100%;
     table-layout: fixed;
 }
