added required field

--- a/src/app/components/user-dialog/user-dialog.component.html
+++ b/src/app/components/user-dialog/user-dialog.component.html
@@ -12,7 +12,7 @@
 
         <mat-form-field appearance="fill" class="full-width">
             <mat-label>Title</mat-label>
-            <input matInput formControlName="title" placeholder="Name" />
+            <input matInput required formControlName="title" placeholder="Name" />
         </mat-form-field>
 
         <div class="checkbox-container">
