--- a/src/app/components/users-table/users-table.component.scss
+++ b/src/app/components/users-table/users-table.component.scss
@@ -3,13 +3,12 @@
     flex-direction: column;
     padding: 1rem;
 
+
     &__header {
         display: flex;
         justify-content: space-between;
-
-        &__button {
-            padding: 0.5rem 0 0.5rem 0;
-        }
+        border: 2px solid red;
+        padding: 0 0 0.5rem 0;
     }
 }
 
